tests/snapshots/hyper__hyper_default_explain.snap
---
source: tests/hyper.rs
expression: "support::stderr_text(&output)"
---
terminal configuration does not indicate a Nerd Font
