tests/snapshots/hyper__hyper_default_json.snap
---
source: tests/hyper.rs
expression: "support::stdout_json_snapshot(&output)"
---
{
  "confidence": "certain",
  "config_path": "<SCENARIO_HOME>/hyper-default/.config/Hyper/hyper.json",
  "detected": false,
  "font": "Menlo, \"DejaVu Sans Mono\", Consolas, \"Lucida Console\", monospace",
  "profile": null,
  "source": "terminal_config",
  "terminal": "hyper"
}
