tests/snapshots/hyper__hyper_malformed_json.snap
---
source: tests/hyper.rs
expression: "support::stdout_json_snapshot(&output)"
---
{
  "confidence": "certain",
  "config_path": "<SCENARIO_HOME>/hyper-malformed/.config/Hyper/hyper.json",
  "detected": null,
  "error_reason": "failed to parse <SCENARIO_HOME>/hyper-malformed/.config/Hyper/hyper.json at line 3 column 20",
  "font": null,
  "profile": null,
  "source": "config_error",
  "terminal": "hyper"
}
