tests/snapshots/hyper__hyper_nerd_font_explain.snap
---
source: tests/hyper.rs
expression: "support::stderr_text(&output)"
---
terminal configuration indicates a Nerd Font is active
